package services

import (
	"context"
	"testing"
	"time"

	pb "github.com/betracehq/betrace/backend/generated/betrace/v1"
	"github.com/betracehq/betrace/backend/internal/rules"
	internalServices "github.com/betracehq/betrace/backend/internal/services"
	"github.com/betracehq/betrace/backend/pkg/models"
)

// TestValidateSpan_ValidInputs tests that valid spans pass validation
func TestValidateSpan_ValidInputs(t *testing.T) {
	service := &SpanService{}

	validSpan := &pb.Span{
		TraceId: "trace-123",
		SpanId:  "span-456",
		Name:    "test-operation",
	}

	if err := service.validateSpan(validSpan); err != nil {
		t.Errorf("Expected valid span to pass validation, got error: %v", err)
	}
}

// TestValidateSpan_InvalidInputs tests that invalid spans fail validation
func TestValidateSpan_InvalidInputs(t *testing.T) {
	service := &SpanService{}

	tests := []struct {
		name    string
		span    *pb.Span
		wantErr string
	}{
		{
			name:    "nil span",
			span:    nil,
			wantErr: "span is nil",
		},
		{
			name: "missing trace_id",
			span: &pb.Span{
				SpanId: "span-123",
				Name:   "test-op",
			},
			wantErr: "trace_id is required",
		},
		{
			name: "missing span_id",
			span: &pb.Span{
				TraceId: "trace-123",
				Name:    "test-op",
			},
			wantErr: "span_id is required",
		},
		{
			name: "missing name",
			span: &pb.Span{
				TraceId: "trace-123",
				SpanId:  "span-456",
			},
			wantErr: "span name is required",
		},
	}

	for _, tt := range tests {
		t.Run(tt.name, func(t *testing.T) {
			err := service.validateSpan(tt.span)
			if err == nil {
				t.Fatalf("Expected error %q, got nil", tt.wantErr)
			}
			if err.Error() != tt.wantErr {
				t.Errorf("Expected error %q, got %q", tt.wantErr, err.Error())
			}
		})
	}
}

// TestProtoToModelSpan_Conversion tests span conversion logic
func TestProtoToModelSpan_Conversion(t *testing.T) {
	service := &SpanService{}

	protoSpan := &pb.Span{
		TraceId:      "trace-123",
		SpanId:       "span-456",
		ParentSpanId: "parent-789",
		Name:         "test-operation",
		StartTime:    1000000000000, // Unix nanoseconds
		EndTime:      1000001000000, // 1ms later
		DurationMs:   1,              // 1ms
		Attributes: map[string]string{
			"http.method": "GET",
			"http.url":    "/api/test",
		},
		Status: "OK",
	}

	modelSpan := service.protoToModelSpan(protoSpan)

	// Verify all fields are converted correctly
	if modelSpan.TraceID != "trace-123" {
		t.Errorf("Expected TraceID=trace-123, got %s", modelSpan.TraceID)
	}
	if modelSpan.SpanID != "span-456" {
		t.Errorf("Expected SpanID=span-456, got %s", modelSpan.SpanID)
	}
	if modelSpan.ParentSpanID != "parent-789" {
		t.Errorf("Expected ParentSpanID=parent-789, got %s", modelSpan.ParentSpanID)
	}
	if modelSpan.OperationName != "test-operation" {
		t.Errorf("Expected OperationName=test-operation, got %s", modelSpan.OperationName)
	}
	if modelSpan.Status != "OK" {
		t.Errorf("Expected Status=OK, got %s", modelSpan.Status)
	}

	// Verify timestamps
	expectedStart := time.Unix(0, 1000000000000)
	if !modelSpan.StartTime.Equal(expectedStart) {
		t.Errorf("Expected StartTime=%v, got %v", expectedStart, modelSpan.StartTime)
	}

	expectedEnd := time.Unix(0, 1000001000000)
	if !modelSpan.EndTime.Equal(expectedEnd) {
		t.Errorf("Expected EndTime=%v, got %v", expectedEnd, modelSpan.EndTime)
	}

	// Verify duration (1ms = 1,000,000 nanoseconds)
	expectedDuration := int64(1000000)
	if modelSpan.Duration != expectedDuration {
		t.Errorf("Expected Duration=%d ns, got %d ns", expectedDuration, modelSpan.Duration)
	}

	// Verify attributes
	if len(modelSpan.Attributes) != 2 {
		t.Errorf("Expected 2 attributes, got %d", len(modelSpan.Attributes))
	}
	if modelSpan.Attributes["http.method"] != "GET" {
		t.Errorf("Expected http.method=GET, got %s", modelSpan.Attributes["http.method"])
	}
}

// TestProtoToModelSpan_DurationCalculation tests automatic duration calculation
func TestProtoToModelSpan_DurationCalculation(t *testing.T) {
	service := &SpanService{}

	protoSpan := &pb.Span{
		TraceId:    "trace-123",
		SpanId:     "span-456",
		Name:       "test-op",
		StartTime:  1000000000000, // Unix nanoseconds
		EndTime:    1000005000000, // 5ms later
		DurationMs: 0,             // Not provided, should be calculated
	}

	modelSpan := service.protoToModelSpan(protoSpan)

	// Should calculate duration from timestamps (5ms = 5,000,000 ns)
	expectedDuration := int64(5000000)
	if modelSpan.Duration != expectedDuration {
		t.Errorf("Expected auto-calculated Duration=%d ns, got %d ns", expectedDuration, modelSpan.Duration)
	}
}

// TestIngestSpans_EmptyRequest tests handling of empty requests
func TestIngestSpans_EmptyRequest(t *testing.T) {
	engine := rules.NewRuleEngine()
	violationStore := internalServices.NewViolationStoreMemory("test-key")
	service := NewSpanService(engine, violationStore)
	defer service.traceBuffer.Stop()

	ctx := context.Background()

	tests := []struct {
		name string
		req  *pb.IngestSpansRequest
	}{
		{
			name: "nil request",
			req:  nil,
		},
		{
			name: "empty spans",
			req:  &pb.IngestSpansRequest{Spans: []*pb.Span{}},
		},
	}

	for _, tt := range tests {
		t.Run(tt.name, func(t *testing.T) {
			resp, err := service.IngestSpans(ctx, tt.req)
			if err != nil {
				t.Fatalf("Expected no error for empty request, got: %v", err)
			}
			if resp.Accepted != 0 {
				t.Errorf("Expected Accepted=0, got %d", resp.Accepted)
			}
			if resp.Rejected != 0 {
				t.Errorf("Expected Rejected=0, got %d", resp.Rejected)
			}
		})
	}
}

// TestIngestSpans_ValidationErrors tests that invalid spans are rejected
func TestIngestSpans_ValidationErrors(t *testing.T) {
	engine := rules.NewRuleEngine()
	violationStore := internalServices.NewViolationStoreMemory("test-key")
	service := NewSpanService(engine, violationStore)
	defer service.traceBuffer.Stop()

	ctx := context.Background()

	tests := []struct {
		name        string
		req         *pb.IngestSpansRequest
		wantErrCode string
	}{
		{
			name: "missing trace_id",
			req: &pb.IngestSpansRequest{
				Spans: []*pb.Span{
					{SpanId: "span-1", Name: "test"},
				},
			},
			wantErrCode: "InvalidArgument",
		},
		{
			name: "missing span_id",
			req: &pb.IngestSpansRequest{
				Spans: []*pb.Span{
					{TraceId: "trace-1", Name: "test"},
				},
			},
			wantErrCode: "InvalidArgument",
		},
		{
			name: "too many spans",
			req: &pb.IngestSpansRequest{
				Spans: make([]*pb.Span, 10001), // maxSpansPerBatch = 10000
			},
			wantErrCode: "InvalidArgument",
		},
	}

	for _, tt := range tests {
		t.Run(tt.name, func(t *testing.T) {
			_, err := service.IngestSpans(ctx, tt.req)
			if err == nil {
				t.Fatal("Expected error, got nil")
			}
			// Note: We're just checking that an error occurred
			// gRPC status codes would be checked in integration tests
		})
	}
}

// TestIngestSpans_TooManyAttributes tests attribute limit enforcement
func TestIngestSpans_TooManyAttributes(t *testing.T) {
	engine := rules.NewRuleEngine()
	violationStore := internalServices.NewViolationStoreMemory("test-key")
	service := NewSpanService(engine, violationStore)
	defer service.traceBuffer.Stop()

	ctx := context.Background()

	// Create span with 129 attributes (max is 128)
	attrs := make(map[string]string)
	for i := 0; i < 129; i++ {
		attrs[string(rune('a'+i%26))+string(rune(i))] = "value"
	}

	req := &pb.IngestSpansRequest{
		Spans: []*pb.Span{
			{
				TraceId:    "trace-1",
				SpanId:     "span-1",
				Name:       "test",
				Attributes: attrs,
			},
		},
	}

	_, err := service.IngestSpans(ctx, req)
	if err == nil {
		t.Fatal("Expected error for too many attributes, got nil")
	}
}

// TestIngestSpans_SuccessfulIngestion tests basic span ingestion
func TestIngestSpans_SuccessfulIngestion(t *testing.T) {
	engine := rules.NewRuleEngine()
	violationStore := internalServices.NewViolationStoreMemory("test-key")
	service := NewSpanService(engine, violationStore)
	defer service.traceBuffer.Stop()

	ctx := context.Background()

	req := &pb.IngestSpansRequest{
		Spans: []*pb.Span{
			{
				TraceId:   "trace-1",
				SpanId:    "span-1",
				Name:      "test-operation",
				StartTime: time.Now().UnixNano(),
				EndTime:   time.Now().Add(10 * time.Millisecond).UnixNano(),
			},
			{
				TraceId:   "trace-1",
				SpanId:    "span-2",
				Name:      "another-operation",
				StartTime: time.Now().UnixNano(),
				EndTime:   time.Now().Add(5 * time.Millisecond).UnixNano(),
			},
		},
	}

	resp, err := service.IngestSpans(ctx, req)
	if err != nil {
		t.Fatalf("Expected successful ingestion, got error: %v", err)
	}

	if resp.Accepted != 2 {
		t.Errorf("Expected Accepted=2, got %d", resp.Accepted)
	}
	if resp.Rejected != 0 {
		t.Errorf("Expected Rejected=0, got %d", resp.Rejected)
	}

	// Verify spans were added to trace buffer
	bufferedSpans := service.traceBuffer.GetTrace("trace-1")
	if len(bufferedSpans) != 2 {
		t.Errorf("Expected 2 spans in buffer, got %d", len(bufferedSpans))
	}
}

// TestIngestSpans_RuleEvaluation tests that rules are evaluated against spans
func TestIngestSpans_RuleEvaluation(t *testing.T) {
	engine := rules.NewRuleEngine()
	violationStore := internalServices.NewViolationStoreMemory("test-key")
	service := NewSpanService(engine, violationStore)
	defer service.traceBuffer.Stop()

	ctx := context.Background()

	// Create a simple rule that matches all spans
	rule := models.Rule{
		ID:         "test-rule",
		Name:       "Test Rule",
		Expression: "true", // Always matches
		Enabled:    true,
		Severity:   "HIGH",
	}

	if err := engine.LoadRule(rule); err != nil {
		t.Fatalf("Failed to load rule: %v", err)
	}

	req := &pb.IngestSpansRequest{
		Spans: []*pb.Span{
			{
				TraceId:   "trace-1",
				SpanId:    "span-1",
				Name:      "test-operation",
				StartTime: time.Now().UnixNano(),
				EndTime:   time.Now().Add(10 * time.Millisecond).UnixNano(),
			},
		},
	}

	resp, err := service.IngestSpans(ctx, req)
	if err != nil {
		t.Fatalf("Expected successful ingestion, got error: %v", err)
	}

	if resp.Accepted != 1 {
		t.Errorf("Expected Accepted=1, got %d", resp.Accepted)
	}

	// Note: ViolationStoreMemory doesn't expose List() method for testing
	// In real usage, violations are recorded and retrieved via violation_service.go
	// The fact that IngestSpans succeeded without errors confirms the rule was evaluated
	// TODO: Add integration test with violation_service to verify end-to-end flow
}

// TestIngestSpans_ErrorHandling tests graceful error handling
func TestIngestSpans_ErrorHandling(t *testing.T) {
	engine := rules.NewRuleEngine()
	violationStore := internalServices.NewViolationStoreMemory("test-key")
	service := NewSpanService(engine, violationStore)
	defer service.traceBuffer.Stop()

	ctx := context.Background()

	// Create a rule with invalid expression (to trigger evaluation error)
	rule := models.Rule{
		ID:         "bad-rule",
		Name:       "Bad Rule",
		Expression: "span.duration >", // Invalid syntax
		Enabled:    true,
		Severity:   "HIGH",
	}

	// Note: LoadRule might reject this, which is fine
	engine.LoadRule(rule)

	req := &pb.IngestSpansRequest{
		Spans: []*pb.Span{
			{
				TraceId:   "trace-1",
				SpanId:    "span-1",
				Name:      "test-operation",
				StartTime: time.Now().UnixNano(),
				EndTime:   time.Now().Add(10 * time.Millisecond).UnixNano(),
			},
		},
	}

	// Even if rule evaluation fails, ingestion should succeed
	resp, err := service.IngestSpans(ctx, req)
	if err != nil {
		t.Fatalf("Expected ingestion to succeed despite rule error, got: %v", err)
	}

	if resp.Accepted != 1 {
		t.Errorf("Expected Accepted=1, got %d", resp.Accepted)
	}
}
